--- a/src/clubs.html
+++ b/src/clubs.html
@@ -74,7 +74,7 @@
                 <a class="navigation__link" href="/clubs.html">Клубы</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Амбассадоры</a>
+                <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
             </div>
             <div class="navigation__item ">
                 <a class="navigation__link" href="#">О нас</a>
@@ -207,7 +207,7 @@
                             <a class="navigation__link navigation__link--white" href="/clubs.html">Клубы</a>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">Амбассадоры</a>
+                            <a class="navigation__link navigation__link--white" href="/ambassadors.html">Амбассадоры</a>
                         </div>
                         <div class="navigation__item ">
                             <a class="navigation__link navigation__link--white" href="#">О нас</a>
