--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                 <a class="navigation__link" href="/clubs.html">Клубы</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Амбассадоры</a>
+                <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
             </div>
             <div class="navigation__item ">
                 <a class="navigation__link" href="#">О нас</a>
@@ -134,7 +134,8 @@
                                 </div>
                             </div>
                             <div class="slidePromo__linkBlock linkBlock">
-                                <a href="#" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
+                                <a href="/ambassadors.html" class="linkBlock__item linkBlock__item--red">Все
+                                    амбассадоры &rarr;</a>
                             </div>
 
                         </div>
@@ -181,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="slidePromo__linkBlock linkBlock">
-                                <a href="#" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
+                                <a href="/ambassadors.html" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
                             </div>
 
                         </div>
@@ -228,7 +229,7 @@
                                 </div>
                             </div>
                             <div class="slidePromo__linkBlock linkBlock">
-                                <a href="#" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
+                                <a href="/ambassadors.html" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
                             </div>
 
                         </div>
@@ -275,7 +276,8 @@
                                 </div>
                             </div>
                             <div class="slidePromo__linkBlock linkBlock">
-                                <a href="#" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
+                                <a href="/ambassadors.html" class="linkBlock__item linkBlock__item--red">Все
+                                    амбассадоры &rarr;</a>
                             </div>
 
                         </div>
@@ -393,7 +395,7 @@
                     <option class="filter__option option">Новосибирск</option>
                 </select>
             </div>
-            <div class="ambassadors__container" id="ambassador-slider">
+            <div class="ambassadors__container ambassadors__container-slider" id="ambassador-slider">
                 <div class="ambassadors__item ambassador">
                     <div class="ambassador__img">
                         <img src="img/amb1.png" alt="" class="ambassador__picture">
@@ -542,7 +544,7 @@
             </div>
             <div class="ambassadors__footer">
                 <div class="ambassadors__linkAll linkBlock">
-                    <a class="linkBlock__item linkBlock__item--white">Все амбассадоры &rarr;</a>
+                    <a href="/ambassadors.html" class="linkBlock__item linkBlock__item--white">Все амбассадоры &rarr;</a>
                 </div>
 
                 <div class="ambassadors__paginationWrapper">
@@ -638,7 +640,7 @@
                             </button>
                         </div>
                         <div class="orderCTA__item orderCTA__item--min linkBlock">
-                            <a class="linkBlock__item linkBlock__item--white orderCTA__link">Все амбассадоры</a>
+                            <a href="/ambassadors.html" class="linkBlock__item linkBlock__item--white orderCTA__link">Все амбассадоры</a>
                         </div>
                     </div>
                 </div>
@@ -860,7 +862,7 @@
                             <a class="navigation__link navigation__link--white" href="/clubs.html">Клубы</a>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">Амбассадоры</a>
+                            <a class="navigation__link navigation__link--white" href="/ambassadors.html">Амбассадоры</a>
                         </div>
                         <div class="navigation__item ">
                             <a class="navigation__link navigation__link--white" href="#">О нас</a>
