--- a/src/ambassadors.html
+++ b/src/ambassadors.html
@@ -285,6 +285,90 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="about__block">
+            <div class="about__title aboutTitle">
+                    <span class="aboutTitle__text titleText">
+                       Что вы получаете, становясь <span class="red">амбассадором?</span>
+                    </span>
+            </div>
+            <div class="aboutDescription__content ">
+                <div class="logoSymbol">
+                    <span class="aboutDescription__text aboutDescription__text--bold">
+                        Нужен текст о том, почему круто быть амбассадором, что они получают, сотрудничая с нами.
+                    </span>
+                </div>
+                <span class="aboutDescription__text">
+                    Мы очень разные, но всех их объединяет игра, эмоции, азарт, общение, мозги, хорошая форма и все вот это. Четыре года назад нас было 300-400 человек. Мы хотим больше, больше друзей в нашей любимой игре, и мы зовём вас поиграть с нами. Если не пробовали, любой амбассадор абсолютно бесплатно с удовольствием проведёт вам сквош-ликбез в одном из крупнейших клубов страны.
+                </span>
+            </div>
+        </div>
+        <div class="about__block about__block--photo" style="background-image: url(img/ambassadors_about.png)">
+            <div class="about__linkBlock linkBlock"><a href="/about.html"
+                                                       class="linkBlock__item linkBlock__item--red">Читать
+                подробнее →</a>
+            </div>
+        </div>
+    </section>
+    <section class="map" id="map">
+        <div class="map__list mapList">
+            <div class="mapList__titleBlock">
+                <div class="mapList__title">Карта клубов</div>
+                <div class="mapList__selectBlock">
+                    <select class="mapList__select" name="map_country">
+                        <option class="option mapList__option">Россия</option>
+                        <option class="option mapList__option">Франция</option>
+                    </select>
+                    <select class="mapList__select" name="map_city">
+                        <option class="option mapList__option">Москва</option>
+                        <option class="option mapList__option">Новосибирск</option>
+                    </select>
+                </div>
+            </div>
+            <div class="mapList__listBlock mapClubs">
+                <ul class="mapClubs__container">
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">Название клуба</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule">Ежедневно 10:00—22:00</div>
+                        <div class="linkBlock mapClub__btnBlock">
+                            <a href="club.html" class="linkBlock__item linkBlock__item--red">Подробнее о клубе</a>
+                        </div>
+                    </li>
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">Название клуба</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule"> Пн—Пт 7:00—23:00<br>Сб—Вс 8:00—22:00</div>
+                    </li>
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">«Москва»</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule"> Пн—Пт 7:00—23:00<br>Сб—Вс 8:00—22:00</div>
+                    </li>
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">«Москва»</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule"> Пн—Пт 7:00—23:00<br>Сб—Вс 8:00—22:00</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="seo  innerWrapper">
+        <div class="wrapper">
+            <div class="seo__title titleText">squash4friends</div>
+            <div class="seo__description logoSymbol">Блок под SEO-текст<br>
+                — Сочетание физической активности и ментальной деятельности<br>
+                — часто называют шахматами на корте<br>
+                — Полезна для здоровья - журнал Форбс назвал сквош самой здоровой игрой<br>
+                — Доступно - легко начать в любом возрасте
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="footer__nav">
             <div class="wrapper">
