--- a/src/index.html
+++ b/src/index.html
@@ -304,13 +304,10 @@
         </div>
     </section>
     <section class="about">
-        <div class="about__block about__block--descr">
-            <div class="about__title aboutTitle">
-                    <span class="aboutTitle__text titleText">
-                        Кто мы и почему
-                    </span>
-                <br>
-                <span class="aboutTitle__text titleText titleText--red">любим сквош</span>
+        <div class="about__block about__block--grey">
+            <div class="about__title aboutTitle titleText">
+                        Кто мы и почему <br>
+                <span class="red">любим сквош</span>
             </div>
             <div class="aboutDescription__content ">
                 <div class="logoSymbol">
